add ajax and fetch

--- a/js/前后端交互.md
+++ b/js/前后端交互.md
@@ -71,8 +71,51 @@ proxy-url = `http://127.0.0.1:3000/proxy?url=http://localhost:3001/`
         }
     }
 
-## 2、ajax封装的库
- `<script src="https://cdn.bootcss.com/fetch/2.0.3/fetch.min.js">`
+## 2、引入jquery
+    
+    $.ajax({
+        url:"http:www.baidu.com",
+        type:"POST",
+        data:{username:username},
+        dataType:"json",
+        success:function(data){
+            console.log(data)
+        },
+        err:function(err){
+            console.log(err)
+        }
+    })
+## 3、ajax封装的库
+    <script src="https://cdn.bootcss.com/fetch/2.0.3/fetch.min.js" />
+
+    let myHeaders = new Headers();
+    myHeaders.append('Content-Type', 'application/json');
+
+    let paramJson = JSON.stringify({ 'pkg': this.pkgName, 'pro': this.proName, 'methordName': this.methordName, 'args': args })
+
+    let request = new Request(url, {
+        method: 'POST',
+        mode: 'cors',
+        body: paramJson,
+        headers: myHeaders
+    });
+
+    fetch(request).then((response) => {
+        console.log(response)
+    }).catch((err) => {
+        console.log(err)
+    })
+
+    或者：
+
+    fetch(url).then(res => {
+        return res.json()
+    }).then(data => {
+        console.log(data)
+    }).catch(err => {
+        console.log(err)
+    })
+
 
  # 三、前后端交互常用语
  ## 1、JSON
